assets/css/tourfic.css
/* ... */
.tf_booking-widget .tf_form-row .tf_button {
      padding: 15px 20px;
      width: 100%;
}
.single-tour-inner .tf_button {
      padding: 15px 20px;
      border-radius: 8px;
}

/* Horizontal Search Form */
.tf_booking-widget #check-in-out-date {
    font-size: 13px;
    min-width: 150px;
}

/*================================
|            Search Page CSS     |
================================*/
/* Filter Widget  */
.widget_tf_hotel_filter .tf-filter ul{
    display: block;
    margin: 0;
}
.widget_tf_hotel_filter .tf-filter ul li{
    background: #f2f2f2;
    margin: 0 0 3px 0;
    /* display: grid;
    grid-template-columns: 90% 10%;
    align-items: center; */
    padding: 8px 10px 8px 10px;
    justify-content: space-between;
}
.widget_tf_hotel_filter .tf-filter ul li label{
    display: grid;
    grid-template-columns: 11% 13% 76%;
    align-items: center;
    line-height: 1;
    color: #333;
    cursor: pointer;
}
.widget_tf_hotel_filter .tf-filter ul li label input{
    outline: none;
    width: 14px;
    height: 14px;
    color: #333;
}
.widget_tf_hotel_filter .tf-filter ul li span{
    display: block;
    text-align: center;
    background: #333;
    border-radius: 50%;
    line-height: 20px;
    width: 20px;
    height: 20px;
    color: #fff;
    font-size: 12px;
}

/*================================
|        Widget/Shortcode        |
================================*/
/* Widget Slider */
.tf-widget-slider {
    padding: 40px 0 40px 0;
    margin: 0;
}
.tf-widget-slider .tf-heading{
    text-align: center;
    margin: 0 0 30px 0;
}
.tf-widget-slider .tf-heading h2{
    font-size: 28px;
    font-weight: 600;
    line-height: 32px;
    padding: 0;
    margin: 0 0 10px;
    color: #333;
}
.tf-widget-slider .tf-heading p{
    font-size: 16px;
    color: #555;
    line-height: 18px;
    padding: 0;
    margin: 0;
}
.tf-widget-slider .tf-slider-wrapper .tf-single img{
    border-top-right-radius: 10px;
    border-top-left-radius: 10px;
}
.tf-widget-slider .tf-slider-wrapper .tf-single .tf-single-meta{
    text-align: center;
    background: #f2f2f2;
    border-bottom-left-radius: 10px;
    border-bottom-right-radius: 10px;
    padding: 10px 10px 12px 10px;
}
.tf-widget-slider .tf-slider-wrapper .tf-single .tf-single-meta .tf-title{
    color: #333;
    font-size: 16px;
    line-height: 18px;
    font-weight: 600;
    margin: 0;
    padding: 0;
}

/*================================
|      Theme based CSS Fix       |
================================*/
/**
 * Twenty Twenty Two
 */
/* Slick SLider*/
.single-tf_hotel.theme-twentytwentytwo .slick-slide {
    height: auto !important;
}
.single-tf_hotel.theme-twentytwentytwo .slick-slide img{
    height: auto !important;
}
.single-tf_tours.theme-twentytwentytwo .tf-tour-booking-wrap {
    height: auto !important;
}


/*===========================================
|      Single Hotel Details Quick View      |
===========================================*/

.fancybox-slide #tour_room_details_qv{
    border-radius: 5px;
    padding: 30px;
}
.tf-hotel-room-title {
    line-height: 28px;
    font-size: 24px;
    display: block;
    padding-bottom: 15px;
}
.tf-details-qc-slider-single .tf-details-qcs img{
    width: 100%;
    height: 410px;;
}
.tf-details-qc-slider-nav {
    margin-top: 10px;
}

.tf-details-qc-slider-nav .tf-details-qcs img{
    height: 60px;
    width: 70px;
}
.tf-details-qc-slider-nav .tf-details-qcs.is-active img{
    border: 2px solid #003162;
}
.tf-details-qc-slider-nav .slick-track{
    margin: 0;
}

.tf-details-qc-slider-single .slick-prev:before,
.tf-details-qc-slider-single .slick-next:before{
    color: #000 !important;
}
#tour_room_details_loader {
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background: rgba(255,255,255,.8);
    display: none;
    z-index: 99999999;
}
#tour_room_details_loader_img{
    height: 100%;
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
}
.tf-hotel-location-preview{
    position: relative;
}
.tf-hotel-location-preview a{
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
}
.tf-hotel-location-preview a span{
    background: #003162;
    color: #fff;
    text-decoration: none;
    display: inline-block;
    text-align: center;
    font-size: 14px;
    border: 1px solid #003162;
    border-radius: 2px;
    padding: 6px 15px;
}
#tf-hotel-google-maps {
    background-color: unset;
    width: 98%;
}
.tf-hotel-google-maps-container{
    padding: 5px;
    gap: 16px;
    isolation: isolate;
    position: relative;
    width: 100%;
    background: #FFFFFF;
    box-shadow: 0px 8px 16px rgba(90, 91, 106, 0.2);
    border-radius: 5px;
}
#tf-hotel-google-maps button.fancybox-button.fancybox-close-small {
  padding: 8px;
  width: 40px;
  height: 40px;
  right: 28px;
  top: 28px;
  background: #F5F8FF;
  border-radius: 20px;
}



/*================================
|       Adavance Search Form     |
================================*/

.tf_more_info_selections{
    position: relative;
    cursor: pointer;
}
.tf-more-info {
    position: absolute;
    width: 620px;
    padding: 15px 30px;
    box-shadow: 0 1px 2px rgba(0,0,0,.175);
    border-radius: 0 0 4px 4px;
    border-color: #dfdfdf;
    margin-top: 0;
    background: #fff;
    right: 0;
    top: 102%;
    display: none;
}
.tf-more-info .form-group.form-check{
    width: 33%;
    float: left;
}
.tf-more-info span{
    color: #333;
    font-size: 16px;
    font-weight: 600;
    display: block;
    margin-bottom: 10px;
}
.tf-more-info.show{
    display: block;
}
.tf_form-inner .tf-hotel-results #ui-id-1 li,
.tf_form-inner .tf-hotel-results #ui-id-2 li {
    border-left: 1px solid #d4d4d4;
    border-right: 1px solid #d4d4d4;
}
.tf-filter-price-range .al-range-slider__track{
    background: #EEE;
    height: 10px;
    box-shadow: none !important;
    margin: 30px 0px 10px 0px;
}
/* ... */

